Use more effecient Float.ValueOf method